[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
boundless-market = "0.6"
alloy = { version = "0.9" }
alloy-primitives = { version = "0.8", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.8" }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
actix-web = "4.0"
base64 = "0.13"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
dotenv = "0.15.0"

risc0-build = { version = "1.2", features = ["docker"] }
risc0-zkvm = { version = "1.2", default-features = false }

# risc0-ethereum dependencies.
risc0-build-ethereum = { version = "1.3" }
risc0-ethereum-contracts = { version = "1.3" }